--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "express-jwt": "^5.3.1",
     "express-jwt-authz": "^1.0.0",
     "jwks-rsa": "^1.2.1",
