--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mysql2": "^1.5.2",
-    "sequelize": "^4.37.1"
+    "sequelize": "^4.37.1",
+    "socket.io": "^2.0.4"
   }
 }
