--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/smalldoorman/show-me-the-money#readme",
   "dependencies": {
+    "auth0-lock": "^11.4.0",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
@@ -26,6 +30,9 @@
     "express-jwt-authz": "^1.0.0",
     "jwks-rsa": "^1.2.1",
     "mysql2": "^1.5.2",
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.1",
+    "request": "^2.85.0",
     "sequelize": "^4.37.1"
   }
 }
