--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "show-me-the-money",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "watch": "jest --watchAll"
   },
   "repository": {
     "type": "git",
@@ -34,7 +35,15 @@
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.1",
     "request": "^2.85.0",
+    "request-promise": "^4.2.2",
     "sequelize": "^4.37.1",
     "socket.io": "^2.0.4"
+  },
+  "jest": {
+    "testRegex": ".*.spec.js$",
+    "testEnvironment": "node"
+  },
+  "devDependencies": {
+    "jest": "^22.4.3"
   }
 }
