began checking if user is logged in
need to then check if user exists in db and either return their data or add them to the db

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.1",
     "request": "^2.85.0",
+    "request-promise": "^4.2.2",
     "sequelize": "^4.37.1",
     "socket.io": "^2.0.4"
   }
